--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,21 @@
  *= require_tree .
  *= require_self
  */
+body{
+  background-image:url('/assets/bg.png');
+}
+.navbar-default{
+  opacity:0.5 !important;
+  background-image:url('/assets/whitenoise.png');
+  border-radius:5px;
+}
+.navbar-default .navbar-nav > li > a,.navbar-default .navbar-brand{
+  color:black;
+}
+footer{
+  background-image:url('/assets/whitenoise.png');
+  padding:1%;
+  border-radius:5px;
+  opacity:0.5 !important;
+  color:black;
+}
