--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,25 @@
+<div class="col-md-6">
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+  <div class="form-group">
+    <%= f.label :email %><br />
+    <%= f.email_field :email, autofocus: true,:class=>"form-control" %></div>
 
-  <div><%= f.label :password %><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
+  <div class="form-group"><%= f.label :password %><br />
+    <%= f.password_field :password, autocomplete: "off" ,:class=>"form-control" %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+  <div class="form-group" ><%= f.label :password_confirmation %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "off" ,:class=>"form-control" %></div>
 
-  <div><%= f.submit "Sign up" %></div>
+  <div>
+    <button type="submit" class="btn btn-success" >
+      <i class="fa fa-user"></i> Sign up
+    </button>
+  </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
