switching to google fonts

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,32 +11,9 @@
  * file per style scope.
  *
  *= require_tree .
+ *= require font-awesome
  *= require_self
  */
-@font-face {
-  font-family: 'regencielight';
-  src: url('/assets/regencielight.eot');
-  src: url('/assets/regencielight.eot?#iefix') format('embedded-opentype'),
-  url('/assets/regencielight.woff2') format('woff2'),
-  url('/assets/regencielight.woff') format('woff'),
-  url('/assets/regencielight.ttf') format('truetype'),
-  url('/assets/regencielight.svg#regencielight') format('svg');
-  font-weight: normal;
-  font-style: normal;
-
-}
-@font-face {
-  font-family: 'dodge';
-  src: url('/assets/dodge.eot');
-  src: url('/assets/dodge.eot?#iefix') format('embedded-opentype'),
-  url('/assets/dodge.woff2') format('woff2'),
-  url('/assets/dodge.woff') format('woff'),
-  url('/assets/dodge.ttf') format('truetype'),
-  url('/assets/dodge.svg#dodgedodge') format('svg');
-  font-weight: normal;
-  font-style: normal;
-
-}
 body{
   background-image:url('/assets/bg.png');
   font-family: 'Montserrat', sans-serif;
@@ -56,6 +33,9 @@ footer{
   opacity:0.5 !important;
   color:black;
 }
+.content{
+  font-family: 'Droid Sans', sans-serif;
+}
 /*.title{
 border-bottom-width:2px;
 border-bottom-color:black;
@@ -70,7 +50,7 @@ input[type="email"],input[type="password"],input[type="email"]:focus,input[type=
   padding:0px;
   box-shadow:none;
   border-radius:0px;
-  background-color:none;
+  background-color:transparent;
 }
 .form-control:focus{
   border-bottom-color:#FF363D !important;
