--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,7 +16,7 @@
 
   <div>
     <button type="submit" class="btn btn-success" >
-      <i class="fa fa-user"></i> Sign up
+      <i class="fa fa-user-plus"></i> Sign up
     </button>
   </div>
 <% end %>
