--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,19 +19,24 @@ body{
   font-family: 'Montserrat', sans-serif;
 }
 .navbar-default{
-  opacity:0.5 !important;
-  background-image:url('/assets/whitenoise.png');
-  border-radius:5px;
+  /*opacity:0.5 !important;
+  background-image:url('/assets/whitenoise.png');*/
+border-radius:5px;
+background-color:transparent;
 }
 .navbar-default .navbar-nav > li > a,.navbar-default .navbar-brand{
   color:black;
 }
+.navbar-default .navbar-nav > li > a:hover{
+  border-bottom-color:#FF363D;
+  border-bottom-style:solid;
+  border-bottom-width:3px;
+}
 footer{
-  background-image:url('/assets/whitenoise.png');
   padding:1%;
   border-radius:5px;
-  opacity:0.5 !important;
   color:black;
+  background-color:transparent;
 }
 .content{
   font-family: 'Droid Sans', sans-serif;
@@ -54,4 +59,10 @@ input[type="email"],input[type="password"],input[type="email"]:focus,input[type=
 }
 .form-control:focus{
   border-bottom-color:#FF363D !important;
+}
+.desc{
+  margin-top:50%;
+  margin-bottom:50%;
+  font-size:25px;
+  font-weight:bold;
 }
