--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,24 +53,27 @@
           <ul class="nav navbar-nav">
             <li>
             <%=link_to  root_path  do%>
-              <i class="fa fa-users"></i>  About us
+              <i class="fa fa-compass"></i>  Plan your vacation
             <%end%>
-              </li>
-            <li>
+            </li>
+
             <% if user_signed_in?%>
+            <li>
               <%=link_to destroy_user_session_path,:method=>:delete do%>
                 <i class="fa fa-sign-out"></i> Sign out
               <%end%>
+              </li>
             <%else%>
             <li>
             <%=link_to new_user_registration_path  do%>
               <i class="fa fa-user-plus"></i> Sign up
             <%end%>
             </li>
-
+            <li>
             <%= link_to new_user_session_path  do%>
               <i class="fa fa-sign-in"></i> Sign in
             <%end%>
+            </li>
           <%end%>
             </li>
           </ul>
@@ -86,7 +89,7 @@
       </div><!--/row-->
 
       <footer>
-        <p>&copy; Company 2015</p>
+        <p>&copy; The Nomads</p>
       </footer>
 
     </div> <!-- /container -->
