--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
 <%if user_signed_in?%>
-  <center><h3 class="content">Choose your travel destintation</h3></center>
+  <center><h3 class="content">Choose your travel destintation..<span class="blinking-cursor">|</span>  </h3></center>
+  <br>
   <center>
     <input type="text" name="destination" placeholder="Choose your destination" class="form-control" autofocus="true"></input>
     <br>
