--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,8 +20,8 @@ body{
   background-repeat:no-repeat;
 }
 .navbar-default{
-border-radius:5px;
-background-color:transparent;
+  border-radius:5px;
+  background-color:transparent;
 }
 .navbar-default .navbar-nav > li > a,.navbar-default .navbar-brand{
   color:black;
@@ -40,9 +40,9 @@ footer{
 .content{
   font-family: 'Droid Sans', sans-serif;
 }
-input[type="email"],input[type="text"],input[type="password"],input[type="email"]:focus,input[type="password"]:focus,input[type="text"]:focus {
+input[type="email"],input[type="password"],input[type="email"]:focus,input[type="password"]:focus,input[type="text"]:focus {
   border-bottom-width:3px;
-  border-bottom-color:#333;
+  border-bottom-color:#FF363D !important;
   border-top:none;
   border-right:0px;
   border-left:0px;
@@ -51,9 +51,37 @@ input[type="email"],input[type="text"],input[type="password"],input[type="email"
   border-radius:0px;
   background-color:transparent;
 }
-
-.form-control:focus{
+input[type="text"]{
+  border-bottom-width:3px;
   border-bottom-color:#FF363D !important;
+  border-top:none;
+  border-right:0px;
+  border-left:0px;
+  padding:0px;
+  box-shadow:none;
+  border-radius:0px;
+  background-color:transparent;
+  text-align:center;
+  font-size:25px;
+}
+input[type="text"]:focus{
+  border-bottom-width:3px;
+  border-top:none;
+  border-right:0px;
+  border-left:0px;
+  padding:0px;
+  box-shadow:none;
+  border-radius:0px;
+  background-color:transparent;
+  text-align:center;
+
+  border-bottom-color:#000 !important;
+  text-align:center;
+  color:#FF363D;
+
+}
+.form-control:focus{
+  border-bottom-color:#333;
   border-bottom-width:3px;
 }
 .desc{
@@ -134,14 +162,90 @@ input[type="email"],input[type="text"],input[type="password"],input[type="email"
 }
 .title{
   margin-top:6px;
-  font-size:25px;
-  font-family:'Droid-Sans','sans-serif';
+  font-size:23px;
 }
 .place-desc{
   margin-top:6px;
   font-size:15px;
 }
 hr{
-margin-top:10px;
-margin-bottom:10px;
+  margin-top:10px;
+  margin-bottom:10px;
+}
+.pace {
+  -webkit-pointer-events: none;
+  pointer-events: none;
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+.pace-inactive {
+  display: none;
+}
+
+.pace .pace-progress {
+  background: #FF363D;
+  position: fixed;
+  z-index: 2000;
+  top: 0;
+  right: 100%;
+  width: 100%;
+  height: 2px;
+}
+.blinking-cursor {
+  font-weight: 100;
+  font-size: 30px;
+  color: #2E3D48;
+  -webkit-animation: 1s blink step-end infinite;
+  -moz-animation: 1s blink step-end infinite;
+  -ms-animation: 1s blink step-end infinite;
+  -o-animation: 1s blink step-end infinite;
+  animation: 1s blink step-end infinite;
+}
+
+@keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: black;
+  }
+}
+
+@-moz-keyframes blink {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: black;
+  }
+}
+
+@-webkit-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: black;
+  }
+}
+
+@-ms-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: black;
+  }
+}
+
+@-o-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: black;
+  }
 }
